--- a/emergency-housing.html
+++ b/emergency-housing.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com -->
-<!--  Last Published: Tue Jun 27 2017 19:35:22 GMT+0000 (UTC)  -->
+<!--  Last Published: Thu Jun 29 2017 18:41:24 GMT+0000 (UTC)  -->
 <html data-wf-page="59501935e77d092b5c335e60" data-wf-site="5936d171eee8942f4c1b7856">
 <head>
   <meta charset="utf-8">
@@ -67,7 +67,7 @@
       <div class="w-col w-col-5"></div>
       <div class="column-2 w-clearfix w-col w-col-7">
         <h1 class="projheading projpage">Learning Students' Experience</h1>
-        <p class="imageafter paragraph projpage">We used&nbsp;directed storytelling&nbsp;to quickly learn about the students’ experience, from the time they learn of their acceptance through when they arrive on campus. Some of the starter phrases we used include: “Tell me about your trip to Carnegie Mellon”, “What did you do to prepare for school?” and “How did you travel to campus?”</p>
+        <p class="paragraph projpage">We used&nbsp;directed storytelling&nbsp;to quickly learn about the students’ experience, from the time they learn of their acceptance through when they arrive on campus. Some of the starter phrases we used include: “Tell me about your trip to Carnegie Mellon”, “What did you do to prepare for school?” and “How did you travel to campus?”</p>
       </div>
     </div>
   </div>
@@ -76,7 +76,7 @@
       <div class="w-col w-col-5"></div>
       <div class="column-2 w-clearfix w-col w-col-7">
         <h1 class="projheading projpage">Narrowing Our Scope</h1>
-        <p class="imageafter paragraph projpage">We used&nbsp;affinity diagram&nbsp;to synthesize the stories we’ve heard. Seeing the notes in clusters helped us visually grasp areas of issues and opportunities. We learnt that most students experienced some kind of stress with housing. We knew that tackling the entire journey was an impossible task, so we decided to focus on housing for the remainder of our project.</p>
+        <p class="paragraph projpage">We used&nbsp;affinity diagram&nbsp;to synthesize the stories we’ve heard. Seeing the notes in clusters helped us visually grasp areas of issues and opportunities. We learnt that most students experienced some kind of stress with housing. We knew that tackling the entire journey was an impossible task, so we decided to focus on housing for the remainder of our project.</p>
       </div>
     </div>
   </div>
@@ -85,26 +85,33 @@
       <div class="w-col w-col-5"></div>
       <div class="column-2 w-clearfix w-col w-col-7">
         <h1 class="projheading projpage">Modelling and Reframing</h1>
-        <p class="imageafter paragraph projpage">Using the&nbsp;Analysis-Synthesis Bridge Model, we created a&nbsp;journey map&nbsp;to synthesize the students' current experience to getting to Carnegie Mellon. An idealized experience is mapped out through a second journey map below.</p><img class="firstimage image projpage" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 53vw, 54vw" src="images/Resp-web-portfolio-images-03.png" srcset="images/Resp-web-portfolio-images-03-p-500.png 500w, images/Resp-web-portfolio-images-03-p-800.png 800w, images/Resp-web-portfolio-images-03-p-1080.png 1080w, images/Resp-web-portfolio-images-03.png 1650w" width="800"><img class="image projpage" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 53vw, 54vw" src="images/Resp-web-portfolio-images-02.png" srcset="images/Resp-web-portfolio-images-02-p-500.png 500w, images/Resp-web-portfolio-images-02-p-800.png 800w, images/Resp-web-portfolio-images-02.png 1650w" width="800">
+        <p class="imageafter paragraph projpage">Using the&nbsp;Analysis-Synthesis Bridge Model, we created a&nbsp;journey map&nbsp;to synthesize the students' current experience to getting to Carnegie Mellon. An idealized experience is mapped out through a second journey map below.</p>
       </div>
     </div>
+  </div>
+  <div class="projpage projsection"><img class="fullblownimage projpage" sizes="100vw" src="images/Resp-web-portfolio-images-03.png" srcset="images/Resp-web-portfolio-images-03-p-500.png 500w, images/Resp-web-portfolio-images-03-p-800.png 800w, images/Resp-web-portfolio-images-03-p-1080.png 1080w, images/Resp-web-portfolio-images-03.png 1650w" width="1500"><img class="fullblownimage lastimage projpage" sizes="100vw" src="images/Resp-web-portfolio-images-02.png" srcset="images/Resp-web-portfolio-images-02-p-500.png 500w, images/Resp-web-portfolio-images-02-p-800.png 800w, images/Resp-web-portfolio-images-02.png 1650w" width="1500">
   </div>
   <div class="projpage projsection">
     <div class="w-row">
       <div class="w-col w-col-5"></div>
       <div class="column-2 w-clearfix w-col w-col-7">
         <h1 class="projheading projpage">Ideating Possible Futures</h1>
-        <p class="imageafter paragraph projpage">Using a&nbsp;"see-think-do" framework, we generated many different&nbsp;scenarios&nbsp;to brainstorm possible customer experiences. We aimed at putting ourselves in the students' shoes. At the end of the ideation session, we compared each scenario and picked one that generated the most value.</p><img class="image projpage" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 53vw, 54vw" src="images/RespWeb_Ideation.jpg" srcset="images/RespWeb_Ideation-p-500.jpeg 500w, images/RespWeb_Ideation-p-1080.jpeg 1080w, images/RespWeb_Ideation.jpg 1300w" width="800">
+        <p class="imageafter paragraph projpage">Using a&nbsp;"see-think-do" framework, we generated many different&nbsp;scenarios&nbsp;to brainstorm possible customer experiences. We aimed at putting ourselves in the students' shoes. At the end of the ideation session, we compared each scenario and picked one that generated the most value.</p>
       </div>
     </div>
+  </div>
+  <div class="projpage projsection"><img class="fullblownimage lastimage projpage" sizes="100vw" src="images/RespWeb_Ideation.jpg" srcset="images/RespWeb_Ideation-p-500.jpeg 500w, images/RespWeb_Ideation-p-1080.jpeg 1080w, images/RespWeb_Ideation.jpg 1300w" width="1500">
   </div>
   <div class="projpage projsection">
     <div class="w-row">
       <div class="w-col w-col-5"></div>
       <div class="column-2 w-clearfix w-col w-col-7">
-        <h1 class="projheading projpage">Planning the User Flow</h1><img class="firstimage image projpage" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 53vw, 54vw" src="images/Screen-Shot-2017-06-21-at-15.14.53.png" srcset="images/Screen-Shot-2017-06-21-at-15.14.53-p-500.png 500w, images/Screen-Shot-2017-06-21-at-15.14.53-p-800.png 800w, images/Screen-Shot-2017-06-21-at-15.14.53-p-1080.png 1080w, images/Screen-Shot-2017-06-21-at-15.14.53-p-1600.png 1600w, images/Screen-Shot-2017-06-21-at-15.14.53-p-2000.png 2000w, images/Screen-Shot-2017-06-21-at-15.14.53.png 2454w" width="800"><img class="firstimage image projpage" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 53vw, 54vw" src="images/Screen-Shot-2017-06-21-at-15.15.13.png" srcset="images/Screen-Shot-2017-06-21-at-15.15.13-p-500.png 500w, images/Screen-Shot-2017-06-21-at-15.15.13-p-800.png 800w, images/Screen-Shot-2017-06-21-at-15.15.13-p-1080.png 1080w, images/Screen-Shot-2017-06-21-at-15.15.13-p-1600.png 1600w, images/Screen-Shot-2017-06-21-at-15.15.13.png 1932w" width="800">
+        <h1 class="projheading projpage">Planning the User Flow</h1>
+        <p class="imageafter paragraph projpage">When a student lands on the homepage, they are briefly introduced to the emergency housing service through descriptions and user stories. They are prompted to book a room, which directs them to the next page where they can browse available options. Once a room is selected, they can read more about it and book a reservation. The last page demonstrates a confirmation which more links to explore. The experience is optimized for mobile.</p>
       </div>
     </div>
+  </div>
+  <div class="projpage projsection"><img class="fullblownimage projpage" sizes="100vw" src="images/Screen-Shot-2017-06-21-at-15.14.53.png" srcset="images/Screen-Shot-2017-06-21-at-15.14.53-p-500.png 500w, images/Screen-Shot-2017-06-21-at-15.14.53-p-800.png 800w, images/Screen-Shot-2017-06-21-at-15.14.53-p-1080.png 1080w, images/Screen-Shot-2017-06-21-at-15.14.53-p-1600.png 1600w, images/Screen-Shot-2017-06-21-at-15.14.53-p-2000.png 2000w, images/Screen-Shot-2017-06-21-at-15.14.53.png 2454w" width="1500"><img class="fullblownimage lastimage projpage" sizes="100vw" src="images/Screen-Shot-2017-06-21-at-15.15.13.png" srcset="images/Screen-Shot-2017-06-21-at-15.15.13-p-500.png 500w, images/Screen-Shot-2017-06-21-at-15.15.13-p-800.png 800w, images/Screen-Shot-2017-06-21-at-15.15.13-p-1080.png 1080w, images/Screen-Shot-2017-06-21-at-15.15.13-p-1600.png 1600w, images/Screen-Shot-2017-06-21-at-15.15.13.png 1932w" width="1500">
   </div>
   <div class="projpage projsection">
     <div class="w-row">
