--- a/homeio.html
+++ b/homeio.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com -->
-<!--  Last Published: Tue Jun 27 2017 19:35:22 GMT+0000 (UTC)  -->
+<!--  Last Published: Thu Jun 29 2017 18:41:24 GMT+0000 (UTC)  -->
 <html data-wf-page="594094e124107c1ebce332fb" data-wf-site="5936d171eee8942f4c1b7856">
 <head>
   <meta charset="utf-8">
@@ -45,7 +45,7 @@
   <div class="projpage projsection">
     <div class="w-row">
       <div class="w-col w-col-4"></div>
-      <div class="columnnopadding w-col w-col-8"><img class="hero homeio projimage projpage" sizes="(max-width: 767px) 100vw, 67vw" src="images/SamsungVac3_Animals.png" srcset="images/SamsungVac3_Animals-p-500.png 500w, images/SamsungVac3_Animals-p-800.png 800w, images/SamsungVac3_Animals-p-1080.png 1080w, images/SamsungVac3_Animals.png 1200w" width="1200">
+      <div class="columnnopadding w-col w-col-8"><img class="hero homeio projimage projpage" sizes="(max-width: 767px) 100vw, (max-width: 1791px) 67vw, 1200px" src="images/SamsungVac3_Animals.png" srcset="images/SamsungVac3_Animals-p-500.png 500w, images/SamsungVac3_Animals-p-800.png 800w, images/SamsungVac3_Animals-p-1080.png 1080w, images/SamsungVac3_Animals.png 1200w" width="1200">
       </div>
     </div>
   </div>
@@ -70,7 +70,7 @@
       <div class="column-2 w-clearfix w-col w-col-7">
         <p class="designprocess projpage sectionlabels">design process</p>
         <h1 class="afterlabel projheading projpage">Confronting Complexity: <br>Building a Framework for Research&nbsp;</h1>
-        <p class="imageafter paragraph projpage">As we delved into the design space, we realized the presence of several unique, but deeply intertwined layers at play. There is no product that exists in a vacuum. In order succeed, we needed to look at the context in which the product exists. We came up with the framework below to orient our research activities.</p><img class="chart image projpage" sizes="(max-width: 767px) 90vw, (max-width: 991px) 52vw, 450px" src="images/HomeioFramework.png" srcset="images/HomeioFramework-p-500.png 500w, images/HomeioFramework-p-800.png 800w, images/HomeioFramework-p-1080.png 1080w, images/HomeioFramework-p-1600.png 1600w, images/HomeioFramework-p-2000.png 2000w, images/HomeioFramework-p-2600.png 2600w, images/HomeioFramework-p-3200.png 3200w, images/HomeioFramework.png 4177w" width="450">
+        <p class="imageafter paragraph projpage">As we delved into the design space, we realized the presence of several unique, but deeply intertwined layers at play. First, the RVC and the relationship people form with it. And from there, how people relate to and approach the task of cleaning—both with and without the assistance of robotics. And lastly, the emotionally complex value homes provide and how that value is affected by cleanliness. We captured these layers in a framework below as a basis for research.</p><img class="chart image projpage" sizes="(max-width: 767px) 90vw, (max-width: 991px) 52vw, 450px" src="images/HomeioFramework.png" srcset="images/HomeioFramework-p-500.png 500w, images/HomeioFramework-p-800.png 800w, images/HomeioFramework-p-1080.png 1080w, images/HomeioFramework-p-1600.png 1600w, images/HomeioFramework-p-2000.png 2000w, images/HomeioFramework-p-2600.png 2600w, images/HomeioFramework-p-3200.png 3200w, images/HomeioFramework.png 4177w" width="450">
       </div>
     </div>
   </div>
@@ -79,7 +79,7 @@
       <div class="w-col w-col-5"></div>
       <div class="column-2 w-clearfix w-col w-col-7">
         <h1 class="projheading projpage">Taking a Deep Dive</h1>
-        <p class="imageafter paragraph projpage">We used a mixture of secondary and field research including desk research, expert interviews, surveys, cultural probes, and diary studies. Having gathered a huge amount of data, we utilized affinity diagrams to synthesize our research findings.</p><img class="firstimage image projpage" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 53vw, 55vw" src="images/Homeo-Research.png" srcset="images/Homeo-Research.png 500w, images/Homeo-Research.png 800w, images/Homeo-Research.png 1080w, images/Homeo-Research.png 1600w, images/Homeo-Research.png 2000w, images/Homeo-Research.png 2276w"><img class="image projpage" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 53vw, 55vw" src="images/IMG_5615-BW.jpg" srcset="images/IMG_5615-BW.jpg 800w, images/IMG_5615-BW.jpg 1600w, images/IMG_5615-BW.jpg 2000w, images/IMG_5615-BW.jpg 2600w, images/IMG_5615-BW.jpg 3200w, images/IMG_5615-BW.jpg 3216w">
+        <p class="imageafter paragraph projpage">We used a mixture of secondary and field research including desk research, expert interviews, surveys, cultural probes, and diary studies. Having gathered a huge amount of data, we utilized affinity diagrams to synthesize our research findings.</p><img class="firstimage image projpage" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 53vw, 55vw" src="images/Homeo-Research.png" srcset="images/Homeo-Research-p-500.png 500w, images/Homeo-Research-p-800.png 800w, images/Homeo-Research-p-1080.png 1080w, images/Homeo-Research-p-1600.png 1600w, images/Homeo-Research-p-2000.png 2000w, images/Homeo-Research.png 2276w"><img class="image projpage" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 53vw, 55vw" src="images/IMG_5615-BW.jpg" srcset="images/IMG_5615-BW-p-800.jpeg 800w, images/IMG_5615-BW-p-1600.jpeg 1600w, images/IMG_5615-BW-p-2000.jpeg 2000w, images/IMG_5615-BW-p-2600.jpeg 2600w, images/IMG_5615-BW-p-3200.jpeg 3200w, images/IMG_5615-BW.jpg 3216w">
       </div>
     </div>
   </div>
@@ -127,7 +127,7 @@ features will not sell more RVCs</span>.&nbsp;</p><img class="image projpage" si
       <div class="w-col w-col-5"></div>
       <div class="column-2 w-clearfix w-col w-col-7">
         <h1 class="projheading projpage">Opportunity for Design</h1>
-        <p class="imageafter paragraph projpage">A product vacuum is being created as RVC development focuses on incremental feature additions without addressing the deeper values the product can provide. We believe the way to differentiate Samsung's robot vacuum offering is to set correct expectations, build trust, and create value.</p><img class="image projpage value" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 53vw, 55vw" src="images/Value-08.png" srcset="images/Value-08.png 500w, images/Value-08.png 800w, images/Value-08.png 1464w">
+        <p class="imageafter paragraph projpage">A product vacuum is being created as RVC development focuses on incremental feature additions without addressing the deeper values the product can provide. We believe the way to differentiate Samsung's robot vacuum offering is to set correct expectations, build trust, and create value.</p><img class="image projpage value" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 53vw, 55vw" src="images/Value-08.png" srcset="images/Value-08-p-500.png 500w, images/Value-08-p-800.png 800w, images/Value-08.png 1464w">
       </div>
     </div>
   </div>
@@ -140,7 +140,7 @@ features will not sell more RVCs</span>.&nbsp;</p><img class="image projpage" si
       </div>
     </div>
   </div>
-  <div class="projpage projsection"><img class="fullblownimage projpage" sizes="100vw" src="images/ExperienceVignettesJourneyMap.jpg" srcset="images/ExperienceVignettesJourneyMap.jpg 500w, images/ExperienceVignettesJourneyMap.jpg 800w, images/ExperienceVignettesJourneyMap.jpg 1080w, images/ExperienceVignettesJourneyMap.jpg 1600w, images/ExperienceVignettesJourneyMap.jpg 2000w, images/ExperienceVignettesJourneyMap.jpg 2600w, images/ExperienceVignettesJourneyMap.jpg 3075w">
+  <div class="projpage projsection"><img class="fullblownimage projpage" sizes="100vw" src="images/ExperienceVignettesJourneyMap.jpg" srcset="images/ExperienceVignettesJourneyMap-p-500.jpeg 500w, images/ExperienceVignettesJourneyMap-p-800.jpeg 800w, images/ExperienceVignettesJourneyMap-p-1080.jpeg 1080w, images/ExperienceVignettesJourneyMap-p-1600.jpeg 1600w, images/ExperienceVignettesJourneyMap-p-2000.jpeg 2000w, images/ExperienceVignettesJourneyMap-p-2600.jpeg 2600w, images/ExperienceVignettesJourneyMap.jpg 3075w">
   </div>
   <div class="projpage projsection">
     <div class="w-row">
