--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com -->
-<!--  Last Published: Tue Jun 27 2017 19:35:22 GMT+0000 (UTC)  -->
+<!--  Last Published: Thu Jun 29 2017 18:41:24 GMT+0000 (UTC)  -->
 <html data-wf-page="594868ef90c11f0e5cc123f3" data-wf-site="5936d171eee8942f4c1b7856">
 <head>
   <meta charset="utf-8">
@@ -40,7 +40,7 @@
     <div class="column-2 w-col w-col-7">
       <a class="w-clearfix w-inline-block" href="http://angel-yu.webflow.io/homeio">
         <p class="home paragraph">project home.io | UX design</p>
-        <h1 class="home projheading">Reimagining the Future of IoT and <br>In-home Robotics</h1><img class="home homeio image" sizes="(max-width: 767px) 90vw, (max-width: 991px) 53vw, 54vw" src="images/Samsung2.png" srcset="images/Samsung2-p-500.png 500w, images/Samsung2-p-800.png 800w, images/Samsung2-p-1080.png 1080w, images/Samsung2.png 1145w" width="650">
+        <h1 class="home projheading">Reimagining the Future of IoT and <br>In-home Robotics</h1><img class="home homeio image" data-ix="scrollintoview" sizes="(max-width: 767px) 90vw, (max-width: 991px) 53vw, 54vw" src="images/Samsung2.png" srcset="images/Samsung2-p-500.png 500w, images/Samsung2-p-800.png 800w, images/Samsung2-p-1080.png 1080w, images/Samsung2.png 1145w" width="650">
       </a>
     </div>
   </div>
@@ -49,7 +49,7 @@
     <div class="column-2 w-col w-col-7">
       <a class="w-clearfix w-inline-block" href="http://angel-yu.webflow.io/parkhelper">
         <p class="home paragraph">park helper | Mobile app design</p>
-        <h1 class="home projheading">Designing for Value Co-production<br>Via Mobile</h1><img class="home image parkhelper" sizes="(max-width: 767px) 90vw, (max-width: 991px) 53vw, 54vw" src="images/ParkHelper4.png" srcset="images/ParkHelper4-p-500.png 500w, images/ParkHelper4-p-800.png 800w, images/ParkHelper4-p-1080.png 1080w, images/ParkHelper4.png 1145w" width="650">
+        <h1 class="home projheading">Designing for Value Co-production<br>Via Mobile</h1><img class="home image parkhelper" data-ix="scrollintoview" sizes="(max-width: 767px) 90vw, (max-width: 991px) 53vw, 54vw" src="images/ParkHelper4.png" srcset="images/ParkHelper4-p-500.png 500w, images/ParkHelper4-p-800.png 800w, images/ParkHelper4-p-1080.png 1080w, images/ParkHelper4.png 1145w" width="650">
       </a>
     </div>
   </div>
@@ -58,7 +58,7 @@
     <div class="column-2 w-col w-col-7">
       <a class="w-clearfix w-inline-block" href="http://angel-yu.webflow.io/emergency-housing">
         <p class="home paragraph">emergency housing | responsive web design</p>
-        <h1 class="home projheading">Improving Incoming Students' Experience&nbsp;to University</h1><img class="emergencyhousing home image" sizes="(max-width: 767px) 90vw, (max-width: 991px) 53vw, 54vw" src="images/RespWeb_Design-copy.png" srcset="images/RespWeb_Design-copy-p-500.png 500w, images/RespWeb_Design-copy-p-800.png 800w, images/RespWeb_Design-copy-p-1080.png 1080w, images/RespWeb_Design-copy.png 1145w" width="650">
+        <h1 class="home projheading">Improving Incoming Students' Experience&nbsp;to University</h1><img class="emergencyhousing home image" data-ix="scrollintoview" sizes="(max-width: 767px) 90vw, (max-width: 991px) 53vw, 54vw" src="images/RespWeb_Design-copy.png" srcset="images/RespWeb_Design-copy-p-500.png 500w, images/RespWeb_Design-copy-p-800.png 800w, images/RespWeb_Design-copy-p-1080.png 1080w, images/RespWeb_Design-copy.png 1145w" width="650">
       </a>
     </div>
   </div>
@@ -67,7 +67,7 @@
     <div class="column-2 w-col w-col-7">
       <a class="w-clearfix w-inline-block" href="http://angel-yu.webflow.io/finally-campaign">
         <p class="home paragraph">finally campaign | branding &amp; digital marketing</p>
-        <h1 class="home projheading">Driving Preference for Logitech ConferenceCams</h1><img class="finally home image" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 53vw, 54vw" src="images/FinallyGuideline2.png" srcset="images/FinallyGuideline2-p-500.png 500w, images/FinallyGuideline2-p-800.png 800w, images/FinallyGuideline2-p-1080.png 1080w, images/FinallyGuideline2.png 1200w" width="1400">
+        <h1 class="home projheading">Driving Preference for Logitech ConferenceCams</h1><img class="finally home image" data-ix="scrollintoview" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 53vw, 54vw" src="images/FinallyGuideline2.png" srcset="images/FinallyGuideline2-p-500.png 500w, images/FinallyGuideline2-p-800.png 800w, images/FinallyGuideline2-p-1080.png 1080w, images/FinallyGuideline2.png 1200w" width="1400">
       </a>
     </div>
   </div>
