--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com -->
-<!--  Last Published: Thu Jun 29 2017 18:41:24 GMT+0000 (UTC)  -->
+<!--  Last Published: Mon Jul 10 2017 12:49:09 GMT+0000 (UTC)  -->
 <html data-wf-page="594868ef90c11f0e5cc123f3" data-wf-site="5936d171eee8942f4c1b7856">
 <head>
   <meta charset="utf-8">
@@ -11,103 +11,87 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/angel-yu.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
-  <script type="text/javascript">
-    WebFont.load({
-      google: {
-        families: ["Bitter:400,700,400italic","Roboto Slab:100,300,regular","Roboto:100,300,regular,500,700","Roboto Condensed:300,regular,700","Raleway:200,300,regular"]
-      }
-    });
-  </script>
+  <script type="text/javascript">WebFont.load({
+  google: {
+    families: ["Roboto Slab:100,300,regular","Roboto:100,300,regular,500,700","Roboto Condensed:300,regular,700","Roboto Mono:300,regular,500"]
+  }
+});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
-  <script type="text/javascript">
-    !function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);
-  </script>
+  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);
+</script>
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
-  <div class="landingbanner w-row">
-    <div class="column-1 w-col w-col-5"></div>
-    <div class="column-2 w-col w-col-7">
-      <p class="home name"><span class="text-span"><span xmlns="http://www.w3.org/1999/xhtml">the works</span> of</span> angel <span class="text-span-2">shi yao</span> yu</p>
-      <div class="home introtext" data-ix="landingtextanimation">I am a UX designer and visual thinker. Currently, I'm studying at Carnegie Mellon's <a href="https://www.hcii.cmu.edu/academics/mhci" target="_blank" class="link intro">Master of Human-Computer Interaction</a> Program. An INTP, I am passionate about designs that are honest, meaningful, and delightful.
-        <br>
-        <br>You can find my&nbsp;<a href="https://drive.google.com/open?id=0BzKc8r98oxcidExNdTZIMkhndjA" target="_blank" class="link intro">resume</a> here. Feel free to take a look at some of the projects I worked on below.</div>
+  <div class="widescreen">
+    <div class="landingbanner w-row">
+      <div class="column-1 w-col w-col-5">
+        <p class="home name" data-ix="landingtextanimation">angel <span class="text-span-2">shi yao</span> yu</p>
+      </div>
+      <div class="column-2 w-col w-col-7">
+        <div class="home introtext" data-ix="landingtextanimation">I am a UX designer and visual thinker. Currently, I'm studying at Carnegie Mellon's <a href="https://www.hcii.cmu.edu/academics/mhci" target="_blank" class="link intro">Master of Human-Computer Interaction</a> Program. I am passionate about designs that are authentic, meaningful, and complex. <br><br>You can find my&nbsp;<a href="https://drive.google.com/open?id=0BzKc8r98oxcidExNdTZIMkhndjA" target="_blank" class="link intro">resume</a> here. Feel free to take a look at some of the projects I worked on below.</div>
+      </div>
     </div>
-  </div>
-  <div class="home projsection w-row">
-    <div class="column-1 w-col w-col-5"></div>
-    <div class="column-2 w-col w-col-7">
-      <a class="w-clearfix w-inline-block" href="http://angel-yu.webflow.io/homeio">
-        <p class="home paragraph">project home.io | UX design</p>
-        <h1 class="home projheading">Reimagining the Future of IoT and <br>In-home Robotics</h1><img class="home homeio image" data-ix="scrollintoview" sizes="(max-width: 767px) 90vw, (max-width: 991px) 53vw, 54vw" src="images/Samsung2.png" srcset="images/Samsung2-p-500.png 500w, images/Samsung2-p-800.png 800w, images/Samsung2-p-1080.png 1080w, images/Samsung2.png 1145w" width="650">
-      </a>
+    <div class="home projsection w-row">
+      <div class="column-1 w-clearfix w-col w-col-5">
+        <p class="home paragraph" data-ix="scrollintoview-text">project home.io | UX design</p>
+        <h1 class="home projheading" data-ix="scrollintoview-text">Reimagining the Future of IoT <br>and In-home Robotics</h1>
+      </div>
+      <div class="column-2 homesections w-col w-col-7"><a class="home homeio w-inline-block" href="http://angel-yu.webflow.io/homeio"><img class="home homeio image" data-ix="scrollintoview" sizes="(max-width: 767px) 100vw, 58vw" src="images/Powerbot.png" srcset="images/Powerbot-p-500.png 500w, images/Powerbot-p-800.png 800w, images/Powerbot.png 898w" width="750"></a></div>
     </div>
-  </div>
-  <div class="home projsection w-row">
-    <div class="column-1 w-col w-col-5"></div>
-    <div class="column-2 w-col w-col-7">
-      <a class="w-clearfix w-inline-block" href="http://angel-yu.webflow.io/parkhelper">
-        <p class="home paragraph">park helper | Mobile app design</p>
-        <h1 class="home projheading">Designing for Value Co-production<br>Via Mobile</h1><img class="home image parkhelper" data-ix="scrollintoview" sizes="(max-width: 767px) 90vw, (max-width: 991px) 53vw, 54vw" src="images/ParkHelper4.png" srcset="images/ParkHelper4-p-500.png 500w, images/ParkHelper4-p-800.png 800w, images/ParkHelper4-p-1080.png 1080w, images/ParkHelper4.png 1145w" width="650">
-      </a>
+    <div class="home projsection w-row">
+      <div class="column-1 homesections w-clearfix w-col w-col-5"><a class="home homeio w-inline-block" href="#"></a>
+        <p class="home paragraph" data-ix="scrollintoview-text">park helper | Mobile app design</p>
+        <h1 class="home projheading" data-ix="scrollintoview-text">Designing for Value Co-production<br>Via Mobile</h1>
+      </div>
+      <div class="column-2 homesections w-col w-col-7"><a class="home homeio w-inline-block" href="http://angel-yu.webflow.io/parkhelper"><img class="home image parkhelper" data-ix="scrollintoview" sizes="(max-width: 767px) 100vw, 58vw" src="images/ParkHelper5.png" srcset="images/ParkHelper5-p-500.png 500w, images/ParkHelper5-p-800.png 800w, images/ParkHelper5.png 983w" width="750"></a></div>
     </div>
-  </div>
-  <div class="home projsection w-row">
-    <div class="column-1 w-col w-col-5"></div>
-    <div class="column-2 w-col w-col-7">
-      <a class="w-clearfix w-inline-block" href="http://angel-yu.webflow.io/emergency-housing">
-        <p class="home paragraph">emergency housing | responsive web design</p>
-        <h1 class="home projheading">Improving Incoming Students' Experience&nbsp;to University</h1><img class="emergencyhousing home image" data-ix="scrollintoview" sizes="(max-width: 767px) 90vw, (max-width: 991px) 53vw, 54vw" src="images/RespWeb_Design-copy.png" srcset="images/RespWeb_Design-copy-p-500.png 500w, images/RespWeb_Design-copy-p-800.png 800w, images/RespWeb_Design-copy-p-1080.png 1080w, images/RespWeb_Design-copy.png 1145w" width="650">
-      </a>
+    <div class="home projsection w-row">
+      <div class="column-1 w-clearfix w-col w-col-5">
+        <p class="home paragraph" data-ix="scrollintoview-text">emergency housing | responsive web design</p>
+        <h1 class="home projheading" data-ix="scrollintoview-text">Improving Incoming Students' <br>Experience&nbsp;to University</h1>
+      </div>
+      <div class="column-2 homesections w-col w-col-7"><a class="home homeio w-inline-block" href="http://angel-yu.webflow.io/emergency-housing"><img class="emergencyhousing home image" data-ix="scrollintoview" sizes="(max-width: 767px) 100vw, 58vw" src="images/RespWeb_Design-copy.png" srcset="images/RespWeb_Design-copy-p-500.png 500w, images/RespWeb_Design-copy-p-800.png 800w, images/RespWeb_Design-copy-p-1080.png 1080w, images/RespWeb_Design-copy.png 1145w" width="750"></a></div>
     </div>
-  </div>
-  <div class="home projsection w-row">
-    <div class="column-1 w-col w-col-5"></div>
-    <div class="column-2 w-col w-col-7">
-      <a class="w-clearfix w-inline-block" href="http://angel-yu.webflow.io/finally-campaign">
-        <p class="home paragraph">finally campaign | branding &amp; digital marketing</p>
-        <h1 class="home projheading">Driving Preference for Logitech ConferenceCams</h1><img class="finally home image" data-ix="scrollintoview" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 53vw, 54vw" src="images/FinallyGuideline2.png" srcset="images/FinallyGuideline2-p-500.png 500w, images/FinallyGuideline2-p-800.png 800w, images/FinallyGuideline2-p-1080.png 1080w, images/FinallyGuideline2.png 1200w" width="1400">
-      </a>
+    <div class="home projsection w-row">
+      <div class="column-1 w-clearfix w-col w-col-5">
+        <p class="home paragraph" data-ix="scrollintoview-text">finally campaign | branding &amp; digital marketing</p>
+        <h1 class="home projheading" data-ix="scrollintoview-text">Driving Preference for <br>Logitech ConferenceCams</h1>
+      </div>
+      <div class="column-2 homesections w-col w-col-7"><a class="home homeio w-inline-block" href="http://angel-yu.webflow.io/finally-campaign"><img class="finally home image" data-ix="scrollintoview" sizes="(max-width: 767px) 100vw, 58vw" src="images/FinallyGuideline2.png" srcset="images/FinallyGuideline2-p-500.png 500w, images/FinallyGuideline2-p-800.png 800w, images/FinallyGuideline2-p-1080.png 1080w, images/FinallyGuideline2.png 1200w" width="1400"></a></div>
     </div>
-  </div>
-  <div class="footer w-row">
-    <div class="column-1 w-col w-col-5"></div>
-    <div class="column-2 footercolumn w-clearfix w-col w-col-7">
-      <a class="link-block w-inline-block" href="mailto:ysy_413@yahoo.com" id="Contact"><img class="socialicon" src="images/Social-Media-Icons-03.png" width="40">
-      </a>
-      <a class="link-block w-inline-block" href="https://www.linkedin.com/in/angelshiyaoyu/" id="Contact" target="_blank"><img class="socialicon" src="images/Social-Media-Icons-01.png" width="40">
-      </a>
-      <a class="link-block w-inline-block" href="https://www.flickr.com/photos/139566503@N02/albums" id="Contact" target="_blank"><img class="socialicon" src="images/Social-Media-Icons-02.png" width="40">
-      </a>
-      <p class="copyright">© 2016 made by angel shi yao yu</p>
+    <div class="footer w-row">
+      <div class="column-1 w-clearfix w-col w-col-5"><a class="link-block w-inline-block" href="mailto:ysy_413@yahoo.com" id="Contact"><img class="socialicon" src="images/Social-Media-Icons-03.png" width="40"></a><a class="link-block w-inline-block" href="https://www.linkedin.com/in/angelshiyaoyu/" id="Contact" target="_blank"><img class="socialicon" src="images/Social-Media-Icons-01.png" width="40"></a><a class="link-block w-inline-block" href="https://www.flickr.com/photos/139566503@N02/albums" id="Contact" target="_blank"><img class="socialicon" src="images/Social-Media-Icons-02.png" width="40"></a></div>
+      <div class="column-2 footercolumn w-col w-col-7">
+        <p class="copyright">© 2016 made by angel shi yao yu</p>
+      </div>
     </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script type="text/javascript">
-    $(function(){
-                var lastScrollTop = 0, delta = 5;
-                $(window).scroll(function(event){
-                   var st = $(this).scrollTop();
-                   if(Math.abs(lastScrollTop - st) <= delta)
-                      return;
-            if (st > lastScrollTop){
-                   // downscroll code
-                $("#MagicMenu").css("top","-120px")
-                   .hover(
-                       function() {
-                           $("#MagicMenu").css("top","0px");
-                       }
-                   )
-               } else {
-                  // upscroll code
-                  $("#MagicMenu").css("top","0px");
-               }
-                   lastScrollTop = st;
-                });
+ $(function(){
+            var lastScrollTop = 0, delta = 5;
+            $(window).scroll(function(event){
+               var st = $(this).scrollTop();
+               if(Math.abs(lastScrollTop - st) <= delta)
+                  return;
+        if (st > lastScrollTop){
+               // downscroll code
+            $("#MagicMenu").css("top","-120px")
+               .hover(
+                   function() {
+                       $("#MagicMenu").css("top","0px");
+                   }
+               )
+           } else {
+              // upscroll code
+              $("#MagicMenu").css("top","0px");
+           }
+               lastScrollTop = st;
             });
+        });
   </script>
 </body>
 </html>
