--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1 class="projheading" data-ix="scrollintoview-text">Home.io</h1>
         <p class="projdes" data-ix="scrollintoview-text">Facilitating trust <br>for service robots at home</p>
       </div>
-      <div class="column-2 homeio homesections w-col w-col-7 w-col-stack"><a class="home homeio w-inline-block" href="http://angel-yu.webflow.io/homeio"><img class="home image" data-ix="scrollintoview" sizes="(max-width: 479px) 95vw, (max-width: 767px) 49vw, (max-width: 991px) 76vw, 52vw" src="images/Powerbot.png" srcset="images/Powerbot-p-500.png 500w, images/Powerbot-p-800.png 800w, images/Powerbot.png 898w" width="750"></a></div>
+      <div class="column-2 homeio homesections w-col w-col-7 w-col-stack"><a class="home homeio w-inline-block" href="http://angelshiyaoyu.com/homeio"><img class="home image" data-ix="scrollintoview" sizes="(max-width: 479px) 95vw, (max-width: 767px) 49vw, (max-width: 991px) 76vw, 52vw" src="images/Powerbot.png" srcset="images/Powerbot-p-500.png 500w, images/Powerbot-p-800.png 800w, images/Powerbot.png 898w" width="750"></a></div>
     </div>
     <div class="home projsection w-row">
       <div class="column-1 homesections w-clearfix w-col w-col-5 w-col-stack">
