--- a/finally-campaign.html
+++ b/finally-campaign.html
@@ -51,9 +51,9 @@
     </div>
     <div class="projpage projsection topborder youmightlike">
       <h1 class="projpage youmightalsolike">You Might Also Like</h1>
-      <p class="projpage projtitle"><a href="http://angel-yu.webflow.io/sumtotal" class="projlink projpage"><span xmlns="http://www.w3.org/1999/xhtml">SumTotal UI Redesign</span></a></p>
+      <p class="projpage projtitle"><a href="http://angelshiyaoyu.com/sumtotal" class="projlink projpage"><span xmlns="http://www.w3.org/1999/xhtml">SumTotal UI Redesign</span></a></p>
       <p class="projinfo youmightlike">improving a leading enterprise software</p>
-      <p class="projpage projtitle"><a href="http://angel-yu.webflow.io/parkhelper" class="projlink projpage"><span xmlns="http://www.w3.org/1999/xhtml">Pa</span>rkhelper</a></p>
+      <p class="projpage projtitle"><a href="http://angelshiyaoyu.com/parkhelper" class="projlink projpage"><span xmlns="http://www.w3.org/1999/xhtml">Pa</span>rkhelper</a></p>
       <p class="projinfo youmightlike">Designing for value co-production via mobile</p>
     </div>
     <div class="backtotop projpage projsection w-clearfix"><a class="nextprojectbutton w-button" href="index.html">Home</a><a class="nextprojectbutton w-button" href="#LandingBanner">Back to Top</a></div>
