--- a/homeio.html
+++ b/homeio.html
@@ -75,9 +75,9 @@
     </div>
     <div class="projpage projsection w-clearfix youmightlike">
       <h1 class="projpage youmightalsolike">You Might Also Like</h1>
-      <p class="projpage projtitle"><a href="http://angel-yu.webflow.io/parkhelper" class="projlink projpage">ParkHelper</a></p>
+      <p class="projpage projtitle"><a href="http://angelshiyaoyu.com/parkhelper" class="projlink projpage">ParkHelper</a></p>
       <p class="projinfo youmightlike">DESIGNING FOR VALUE CO-PRODUCTION<br>VIA MOBILE</p>
-      <p class="lastone projpage projtitle"><a href="http://angel-yu.webflow.io/safenet" class="projlink projpage">Safenet</a></p>
+      <p class="lastone projpage projtitle"><a href="http://angelshiyaoyu.com/safenet" class="projlink projpage">Safenet</a></p>
       <p class="projinfo youmightlike">SCOPING AND REFRAMING STUDENTS'&nbsp;<br>HOUSING EXPERIENCE</p>
     </div>
     <div class="backtotop projpage projsection w-clearfix"><a class="nextprojectbutton w-button" href="index.html">Home</a><a class="nextprojectbutton w-button" href="#LandingBanner">Back to Top</a></div>
