--- a/parkhelper.html
+++ b/parkhelper.html
@@ -71,11 +71,11 @@
     </div>
     <div class="projpage projsection topborder youmightlike">
       <h1 class="projpage youmightalsolike">You Might Also Like</h1>
-      <a class="projpage projtitle w-inline-block" href="http://angel-yu.webflow.io/homeio">
+      <a class="projpage projtitle w-inline-block" href="http://angelshiyaoyu.com/homeio">
         <div>Home.io</div>
       </a>
       <p class="projinfo youmightlike">facilitating trust for service robots at home</p>
-      <a class="projpage projtitle w-inline-block" href="http://angel-yu.webflow.io/sumtotal">
+      <a class="projpage projtitle w-inline-block" href="http://angelshiyaoyu.com/sumtotal">
         <div>SumTotal UI Redesign</div>
       </a>
       <p class="projinfo youmightlike">driving preference for logitech conferencecams</p>
