--- a/safenet.html
+++ b/safenet.html
@@ -80,9 +80,9 @@
     </div>
     <div class="projpage projsection youmightlike">
       <p class="projpage youmightalsolike">Your might also like</p>
-      <p class="projpage projtitle"><a href="http://angel-yu.webflow.io/homeio" class="projlink projpage">Home.io</a></p>
+      <p class="projpage projtitle"><a href="http://angelshiyaoyu.com/homeio" class="projlink projpage">Home.io</a></p>
       <p class="projinfo youmightlike">facilitating trust for service robots at home</p>
-      <p class="projpage projtitle"><span><a href="http://angel-yu.webflow.io/parkhelper" class="projlink projpage">ParkHelper</a></span></p>
+      <p class="projpage projtitle"><span><a href="http://angelshiyaoyu.com/parkhelper" class="projlink projpage">ParkHelper</a></span></p>
       <p class="projinfo youmightlike">Designing for value co-creation via mobile</p>
     </div>
     <div class="projpage projsection withline">
