--- a/sumtotal.html
+++ b/sumtotal.html
@@ -37,10 +37,10 @@
     <div class="projpage projsection"></div>
     <div class="projpage projsection topborder w-clearfix youmightlike">
       <h1 class="projpage youmightalsolike">You Might Also Like</h1>
-      <p class="projpage projtitle"><span><span><a href="#" class="projlink projpage">Home.io</a></span></span>
+      <p class="projpage projtitle"><span><span><a href="http://angelshiyaoyu.com/homeio" class="projlink projpage">Home.io</a></span></span>
       </p>
       <p class="projinfo youmightlike">facilitating trust for service robots at home</p>
-      <p class="lastone projpage projtitle"><span><span><a href="http://angel-yu.webflow.io/parkhelper" class="projlink projpage">P</a>arkHelper</span></span>
+        <p class="lastone projpage projtitle"><span><span><a href="http://angelshiyaoyu.com/parkhelper" class="projlink projpage">ParkHelper</a></span></span>
       </p>
       <p class="projinfo youmightlike">DESIGNING FOR VALUE CO-PRODUCTION VIA MOBILE</p>
     </div>
