--- a/finally-campaign.html
+++ b/finally-campaign.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com -->
-<!--  Last Published: Fri Sep 22 2017 07:14:56 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Sep 27 2017 17:21:16 GMT+0000 (UTC)  -->
 <html data-wf-page="5950132611e5b169565645fe" data-wf-site="5936d171eee8942f4c1b7856">
 <head>
   <meta charset="utf-8">
@@ -20,14 +20,14 @@
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);
 </script>
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
+  <link href="images/Angel_Favicon-02.png" rel="shortcut icon" type="image/x-icon">
+  <link href="images/Angel_Favicon-01.png" rel="apple-touch-icon">
 </head>
 <body>
   <div class="widescreen">
-    <div class="landingbanner2 projpage" id="LandingBanner">
+    <div class="finally landingbanner2 projpage" id="LandingBanner">
       <div class="landingtext projpage w-clearfix">Finally Campaign</div>
-      <p class="projpage projroles">Content Strategy /<br>Campaign Branding /<br>/ Visual Design<br>Digital Marketing /<br>Global Standardization /<br>Metrics &amp;<br> Optimization</p>
+      <p class="projpage projroles">Content Strategy /<br>Campaign Branding /<br>/ Visual Design<br>Digital Marketing /<br>Metrics &amp;<br> Optimization</p>
       <p class="introtext projpage toppadding">In 2015, Logitech went through a brand renewal with remarkable interest in a growing young audience driven by personal goals and lifestyles. The challenge:&nbsp;how do you effectively engage with this audience while communicating the values Logitech has to offer? With a global deployment of Finally Campaign, we repositioned Logitech's videoconferencing products, successfully making our client the number-one player in the business at the time of this project.</p>
     </div>
     <div class="projpage projsection projshowcase w-clearfix" id="LandingBanner"><img class="firstimage fullblownimage projpage projshowcase" data-ix="scrollntoviewprojpage" sizes="(max-width: 479px) 100vw, (max-width: 767px) 97vw, (max-width: 1020px) 98vw, 1000px" src="images/FinallyInfographic2.png" srcset="images/FinallyInfographic2-p-500.png 500w, images/FinallyInfographic2-p-800.png 800w, images/FinallyInfographic2.png 1000w" width="800">
