--- a/parkhelper.html
+++ b/parkhelper.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com -->
-<!--  Last Published: Fri Sep 22 2017 07:14:56 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Sep 27 2017 17:21:16 GMT+0000 (UTC)  -->
 <html data-wf-page="59501b4679614445451a6734" data-wf-site="5936d171eee8942f4c1b7856">
 <head>
   <meta charset="utf-8">
@@ -20,12 +20,12 @@
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);
 </script>
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
+  <link href="images/Angel_Favicon-02.png" rel="shortcut icon" type="image/x-icon">
+  <link href="images/Angel_Favicon-01.png" rel="apple-touch-icon">
 </head>
 <body>
   <div class="widescreen">
-    <div class="landingbanner2 projpage w-clearfix" id="LandingBanner">
+    <div class="landingbanner2 parkhelper projpage" id="LandingBanner">
       <div class="landingtext projpage">ParkHelper</div>
       <p class="projpage projroles">Peer Economy /<br> Value Creation /<br>Community &amp; Culture<br>/ Mobile App<br>/ Guerrilla Research<br>/ UX &amp; UI Design<br>/ Branding</p>
       <p class="introtext projpage toppadding">We've all witnessed the success of companies such as Airbnb, Uber, and TaskRabbit. The sharing economy is estimated to grow from $14 billion in 2014 to $335 billion by 2025. Against the background of this growing trend, ParkHelper is a project which explores the concept of "value". We designed a mobile app which connects drivers with property owners who have a parking space they might want to share. The question we asked ourselves: what sort of value can we generate when community and culture are brought into the design conscious?</p>
@@ -44,11 +44,11 @@
       <h1 class="projpage sectiontitles">Top Insights</h1>
       <p class="insights para projpage">People prefer long-term parking arrangements to avoid hassle</p>
       <p class="_2 insights para projpage">Money is a nice-to-have income for property owners, but a priority for drivers&nbsp;</p>
-      <p class="_2 insights para projpage">People can create unexpected value <br>for each other</p>
+      <p class="_2 insights para projpage">People can create unexpected value for each other</p>
     </div>
     <div class="projpage projsection">
       <h1 class="multiline projpage sectiontitles">Design Decision: <br>Long Term Parking to Save Cost</h1>
-      <p class="para projpage toppadding">Out of our insights a concept started to emerge: we decided to create a mobile app which allows for drivers to reserve long term parking spots from property owners who have an available space. Some key requirements that came up in our research: the app needed to offer a cheaper alternative to street parking, provide a means of reassurance for users, and make parking convenient. Since we were focusing on long term usage, we saw that to be an important design asset. We started to brainstorm other values that could be generated from this relationship between two parties.</p>
+      <p class="para projpage toppadding">Out of our insights a concept started to emerge: we decided to create a mobile app which allows for drivers to reserve long term parking spots from property owners who have an available space. Some key requirements that came up in our research: the app needed to offer a cheaper alternative to street parking, provide a means of reassurance for users, and make parking convenient. Since we were focusing on long term usage, we saw that to be an important design asset. We started to brainstorm other values that could be generated from a long-term relationship.</p>
     </div>
     <div class="projpage projsection">
       <h1 class="multiline projpage sectiontitles">The Bigger Picture: <br>Values Beyond the Monetary</h1>
