--- a/sumtotal.html
+++ b/sumtotal.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com -->
-<!--  Last Published: Fri Sep 22 2017 07:14:56 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Sep 27 2017 17:21:16 GMT+0000 (UTC)  -->
 <html data-wf-page="59c3cef753c3d600013dadd1" data-wf-site="5936d171eee8942f4c1b7856">
 <head>
   <meta charset="utf-8">
@@ -20,12 +20,12 @@
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);
 </script>
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
+  <link href="images/Angel_Favicon-02.png" rel="shortcut icon" type="image/x-icon">
+  <link href="images/Angel_Favicon-01.png" rel="apple-touch-icon">
 </head>
 <body>
   <div class="widescreen">
-    <div class="landingbanner2 projpage w-clearfix" id="LandingBanner">
+    <div class="landingbanner2 projpage sumtotal w-clearfix" id="LandingBanner">
       <div class="landingtext projpage">SumTotal</div>
       <p class="projpage projroles">Enterprise UX /<br>Software Redesign<br> / UI Design<br>/ Bootstrap<br>/ Agile</p>
       <p class="introtext projpage toppadding">In 2015 SumTotal made a shift from a company focused on feature count to an organization that is user focused. While their product was ranked one of the top Human Capital Management (HCM) solutions, SumTotal was losing marketshare over UX. The client approached York &amp; Chapel and Momentum Design Lab with the hope of making their HCM suite intuitive and engaging to use. As one of the 18 designers on this project, I am responsible for the visual experience across Course Launch Player, Transcript, and Continuing Education. The product has been shipped and launched in 2016.</p>
@@ -40,7 +40,7 @@
       <p class="projpage projtitle"><span><span><a href="http://angelshiyaoyu.com/homeio" class="projlink projpage">Home.io</a></span></span>
       </p>
       <p class="projinfo youmightlike">facilitating trust for service robots at home</p>
-        <p class="lastone projpage projtitle"><span><span><a href="http://angelshiyaoyu.com/parkhelper" class="projlink projpage">ParkHelper</a></span></span>
+      <p class="projpage projtitle"><span><span><a href="http://angelshiyaoyu.com/parkhelper" class="projlink projpage">ParkHelper</a></span></span>
       </p>
       <p class="projinfo youmightlike">DESIGNING FOR VALUE CO-PRODUCTION VIA MOBILE</p>
     </div>
