--- a/homeio.html
+++ b/homeio.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Oct 19 2017 03:55:01 GMT+0000 (UTC)  -->
+<!--  Last Published: Thu Oct 19 2017 16:50:35 GMT+0000 (UTC)  -->
 <html data-wf-page="594094e124107c1ebce332fb" data-wf-site="5936d171eee8942f4c1b7856">
 <head>
   <meta charset="utf-8">
@@ -36,6 +36,10 @@
     <div id="LandingBanner" class="projpage projsection projshowcase">
       <p class="designprocess projpage sectionlabels">here&#x27;s what we created</p><img src="images/System-Illustration_Final.jpg" srcset="images/System-Illustration_Final-p-500.jpeg 500w, images/System-Illustration_Final-p-800.jpeg 800w, images/System-Illustration_Final-p-1080.jpeg 1080w, images/System-Illustration_Final-p-1600.jpeg 1600w, images/System-Illustration_Final-p-2000.jpeg 2000w, images/System-Illustration_Final.jpg 2560w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 92vw, (max-width: 991px) 98vw, 99vw" class="firstimage fullblownimage projpage projshowcase"><img src="images/Product-Showcase.jpg" srcset="images/Product-Showcase-p-500.jpeg 500w, images/Product-Showcase-p-800.jpeg 800w, images/Product-Showcase-p-1600.jpeg 1600w, images/Product-Showcase-p-2000.jpeg 2000w, images/Product-Showcase.jpg 2560w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 92vw, (max-width: 991px) 98vw, 99vw" class="fullblownimage projpage projshowcase">
       <div style="padding-top:56.27659574468085%;" class="video w-embed w-video"><iframe class="embedly-embed" src="https://cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fplayer.vimeo.com%2Fvideo%2F229158609&url=https%3A%2F%2Fvimeo.com%2F229158609&image=https%3A%2F%2Fi.vimeocdn.com%2Fvideo%2F649396853_1280.jpg&key=96f1f04c5f4143bcb0f2e68c87d65feb&type=text%2Fhtml&schema=vimeo" scrolling="no" frameborder="0" allowfullscreen=""></iframe></div>
+      <div class="research-report">
+        <div class="text-block-3 w-clearfix"><a href="https://drive.google.com/open?id=0BzKc8r98oxciVHYzSFJHbTdXUjQ" target="_blank" class="para projpage reports">Research Report</a></div>
+        <div class="w-clearfix"><a href="https://drive.google.com/open?id=0BzKc8r98oxcia0VBM1pxZXhmbG8" target="_blank" class="para projpage reports">Spring Report</a></div>
+      </div>
     </div>
     <div class="projpage projsection">
       <p class="designprocess projpage sectionlabels">and How we got there</p>
