--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Oct 19 2017 03:55:01 GMT+0000 (UTC)  -->
+<!--  Last Published: Fri Oct 27 2017 06:40:11 GMT+0000 (UTC)  -->
 <html data-wf-page="594868ef90c11f0e5cc123f3" data-wf-site="5936d171eee8942f4c1b7856">
 <head>
   <meta charset="utf-8">
@@ -24,7 +24,7 @@
       <div class="home nav"><a href="http://angelshiyaoyu.com/about" class="home link resume">about /</a><a target="_blank" href="https://drive.google.com/open?id=0BzKc8r98oxcidExNdTZIMkhndjA" class="home link resume">resume / </a><a href="#Work" class="home last link resume">work /</a></div>
     </div>
     <div class="homeintro section">
-      <p data-ix="scrollintoview-text" class="homeintro">A designer with three years of experience in research driven interaction design and visual communication. I bring a visual perspective in both the design process and outcome. Selected clients include: Samsung, Logitech, SumTotal...<span class="homeintro readmore"><a href="http://www.angelshiyaoyu.com/about" class="homeintro link">read more</a></span></p>
+      <p data-ix="scrollintoview-text" class="homeintro">A design generalist with focus on strategic interaction and visual design. Driven by moments of understanding, experiences, and beauty. Selected clients: Samsung, Logitech, SumTotal...<span class="homeintro readmore"><a href="http://www.angelshiyaoyu.com/about" class="homeintro link">read more</a></span></p>
     </div>
     <a href="http://www.angelshiyaoyu.com/homeio" class="projsectionhomelinkblock w-inline-block">
       <div id="Work" class="home projsection">
