Inserted Dashboard Link

--- a/sumtotal.html
+++ b/sumtotal.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Oct 19 2017 03:55:01 GMT+0000 (UTC)  -->
+<!--  Last Published: Fri Oct 27 2017 18:49:21 GMT+0000 (UTC)  -->
 <html data-wf-page="59c3cef753c3d600013dadd1" data-wf-site="5936d171eee8942f4c1b7856">
 <head>
   <meta charset="utf-8">
@@ -33,9 +33,9 @@
     </div>
     <div id="LandingBanner" class="projintro projpage">
       <p class="introtext projpage">SumTotal offers one of the top Human Capital Management (HCM) solutions in the industry. However they were losing marketshare over UX. SumTotal approached York &amp; Chapel with the hope of making their HCM suite intuitive and engaging to use. As one of the 18 designers on this project, I am responsible for designing the UI across Course Launch Player, Transcript, and Continuing Education. The product has been shipped and launched in 2016 (check out the product page <a href="http://www.sumtotalsystems.com/solutions/core-platform/" target="_blank" class="introtext link">here</a>).</p>
-    </div>
+    </div><a href="https://drive.google.com/open?id=0BzKc8r98oxciM0RUWFZjcXVYVnM" target="_blank" class="link10">Related Work</a>
     <div class="projpage projsection projshowcase">
-      <p class="designprocess projpage sectionlabels">here&#x27;s what I created</p><img src="images/SumTotal-OVerview.jpg" width="800" srcset="images/SumTotal-OVerview-p-800.jpeg 800w, images/SumTotal-OVerview-p-1080.jpeg 1080w, images/SumTotal-OVerview-p-1600.jpeg 1600w, images/SumTotal-OVerview-p-2000.jpeg 2000w, images/SumTotal-OVerview-p-2600.jpeg 2600w, images/SumTotal-OVerview.jpg 3115w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, 98vw" class="firstimage fullblownimage projpage projshowcase"><img src="images/SumTotal-OVerview2.jpg" width="800" srcset="images/SumTotal-OVerview2-p-1080.jpeg 1080w, images/SumTotal-OVerview2-p-1600.jpeg 1600w, images/SumTotal-OVerview2-p-2000.jpeg 2000w, images/SumTotal-OVerview2.jpg 2560w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, 98vw" class="fullblownimage lastimage projpage projshowcase"></div>
+      <p class="designprocess projpage sectionlabels">here&#x27;s what I created</p><img src="images/SumTotal-OVerview.jpg" width="800" srcset="images/SumTotal-OVerview-p-800.jpeg 800w, images/SumTotal-OVerview-p-1080.jpeg 1080w, images/SumTotal-OVerview-p-1600.jpeg 1600w, images/SumTotal-OVerview-p-2000.jpeg 2000w, images/SumTotal-OVerview-p-2600.jpeg 2600w, images/SumTotal-OVerview.jpg 3115w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 92vw, 98vw" class="firstimage fullblownimage projpage projshowcase"><img src="images/SumTotal-OVerview2.jpg" width="800" srcset="images/SumTotal-OVerview2-p-1080.jpeg 1080w, images/SumTotal-OVerview2-p-1600.jpeg 1600w, images/SumTotal-OVerview2-p-2000.jpeg 2000w, images/SumTotal-OVerview2.jpg 2560w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 92vw, 98vw" class="fullblownimage lastimage projpage projshowcase"></div>
     <a href="http://www.angelshiyaoyu.com/homeio" class="projsectionhomelinkblock w-inline-block">
       <div id="Work" class="home projsection">
         <div data-ix="scrollintoview-text" class="casestudy"><span class="home projname">home.io</span> / ux design / multimodal interaction / Service Robots / Health / Smart Home</div>
