--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="home nav"><a href="http://angelshiyaoyu.com/about" class="home link resume">about /</a><a target="_blank" href="https://drive.google.com/open?id=0BzKc8r98oxcidExNdTZIMkhndjA" class="home link resume">resume / </a><a href="#Work" class="home last link resume">work /</a></div>
     </div>
     <div class="homeintro section">
-      <p data-ix="scrollintoview-text" class="homeintro">A design generalist with focus on strategic interaction and visual design. Driven by moments of understanding, experiences, and beauty. Selected clients: Samsung, Logitech, SumTotal...<span class="homeintro readmore"><a href="http://www.angelshiyaoyu.com/about" class="homeintro link">read more</a></span></p>
+      <p data-ix="scrollintoview-text" class="homeintro">An UX generalist with focus on strategic interaction and visual design. Driven by moments of understanding, experiences, and beauty. Selected clients: Samsung, Logitech, SumTotal...<span class="homeintro readmore"><a href="http://www.angelshiyaoyu.com/about" class="homeintro link">read more</a></span></p>
     </div>
     <a href="http://www.angelshiyaoyu.com/homeio" class="projsectionhomelinkblock w-inline-block">
       <div id="Work" class="home projsection">
