Updating app image

--- a/homeio.html
+++ b/homeio.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Oct 27 2017 20:24:03 GMT+0000 (UTC)  -->
+<!--  Last Published: Mon Nov 06 2017 17:51:59 GMT+0000 (UTC)  -->
 <html data-wf-page="594094e124107c1ebce332fb" data-wf-site="5936d171eee8942f4c1b7856">
 <head>
   <meta charset="utf-8">
@@ -78,6 +78,9 @@
       <p class="caption projpage">Rethinking of the home screen as a health dashboard</p><img src="images/app12.jpg" srcset="images/app12-p-500.jpeg 500w, images/app12-p-800.jpeg 800w, images/app12-p-1080.jpeg 1080w, images/app12-p-1600.jpeg 1600w, images/app12-p-2000.jpeg 2000w, images/app12.jpg 2168w" sizes="(max-width: 479px) 87vw, (max-width: 767px) 74vw, (max-width: 991px) 62vw, 50vw" class="image projpage secondimage">
       <p class="caption projpage">Redesigned control makes interaction more intuitive through visual hierarchy and progressive disclosure</p><img src="images/app14.jpg" srcset="images/app14-p-800.jpeg 800w, images/app14-p-1080.jpeg 1080w, images/app14-p-1600.jpeg 1600w, images/app14-p-2000.jpeg 2000w, images/app14.jpg 2168w" sizes="(max-width: 479px) 87vw, (max-width: 767px) 74vw, (max-width: 991px) 62vw, 50vw" class="image projpage secondimage">
       <p class="caption lineafter projpage">Redesigned communication with the robot vacuum</p>
+    </div>
+    <div class="fullblownimage projpage projsection w-clearfix"><img src="images/App-Screens-Sum.jpg" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 98vw, 99vw" srcset="images/App-Screens-Sum.jpg 1080w, images/App-Screens-Sum.jpg 1600w, images/App-Screens-Sum.jpg 2000w, images/App-Screens-Sum.jpg 2560w" data-action="zoom" class="fullblownimage projpage">
+      <p class="caption fullblownimage projpage">Overview of redesigned screens</p>
     </div>
     <div class="projpage projsection">
       <h1 class="projpage sectiontitles">Final Thoughts</h1>
